--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@ Mac/testNet/testNet/obj/Debug/testNet.csproj.FilesWrittenAbsolute.txt
 Mac/testNet/testNet/obj/Debug/testNet.dll
 
 Mac/testNet/testNet/obj/Debug/testNet.dll.mdb
+
+FDF/FDF/bin/FDF.dll
+
+FDF/FDF/bin/FDF.dll.mdb
+
+FDF/FDF/obj/Debug/FDF.dll
+
+FDF/FDF/obj/Debug/FDF.dll.mdb
