--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,12 @@ FDF/FDF/obj/Debug/FDF.dll
 FDF/FDF/obj/Debug/FDF.pdb
 FDF/FDF/bin/FDF.pdb
 FDF/FDF/bin/FDF.dll
-*.dll
+FDF/FDF.userprefs
 
-*.dll
+FDF/FDF/bin/FDF.dll
 
-*.dll
+FDF/FDF/bin/FDF.dll.mdb
 
-*.dll
+FDF/FDF/obj/Debug/FDF.dll
+
+FDF/FDF/obj/Debug/FDF.dll.mdb
