--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,10 @@ FDF/FDF/bin/FDF.dll
 FDF/FDF/bin/FDF.dll.mdb
 
 FDF/FDF.userprefs
+FDF/FDF/bin/FDF.dll
+
+FDF/FDF/bin/FDF.dll.mdb
+
+FDF/FDF/obj/Debug/FDF.dll
+
+FDF/FDF/obj/Debug/FDF.dll.mdb
