--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,3 @@
-FDF/FDF/obj/Debug/FDF.dll
-FDF/FDF/obj/Debug/FDF.pdb
-FDF/FDF/obj/Debug/FDF.dll.mdb
-
-FDF/FDF/bin/FDF.pdb
-FDF/FDF/bin/FDF.dll
-FDF/FDF/bin/FDF.dll.mdb
-
+FDF/FDF/obj/Debug/*
+FDF/FDF/bin/*
 FDF/FDF.userprefs
-FDF/FDF/bin/FDF.dll
-
-FDF/FDF/bin/FDF.dll.mdb
-
-FDF/FDF/obj/Debug/FDF.dll
-
-FDF/FDF/obj/Debug/FDF.dll.mdb
