--- a/FDFk7/FDFk7/web.config
+++ b/FDFk7/FDFk7/web.config
@@ -20,8 +20,7 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
     <authorization>
       <allow users="*" />
     </authorization>
-    <httpHandlers>
-    </httpHandlers>
+    <httpHandlers></httpHandlers>
     <trace enabled="false" localOnly="true" pageOutput="false" requestLimit="10" traceMode="SortByTime" />
     <sessionState mode="InProc" cookieless="false" timeout="20" />
     <globalization requestEncoding="utf-8" responseEncoding="utf-8" />
