--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
 FDF/FDF/obj/Debug/*
 FDF/FDF/bin/*
 FDF/FDF.userprefs
+FDF/Backup/*
+FDFk7/UpgradeLog.htm
+FDFk7/UpgradeLog2.htm
 
 FDFk7/FDFk7/obj/Debug/*
 FDFk7/FDFk7/bin/*
 FDFk7/FDFk7.userprefs
+FDFk7/Backup/*
+FDFk7/UpgradeLog.htm
+FDFk7/UpgradeLog2.htm
