--- a/FDFk7/FDFk7/FDFk7.csproj
+++ b/FDFk7/FDFk7/FDFk7.csproj
@@ -67,6 +67,7 @@
     <Content Include="Kontakt.aspx" />
     <Content Include="Bruger.aspx" />
     <Content Include="Udlejning.aspx" />
+    <Content Include="userdata.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Global.asax.cs">
@@ -110,6 +111,12 @@
     </Compile>
     <Compile Include="Udlejning.aspx.designer.cs">
       <DependentUpon>Udlejning.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="userdata.aspx.cs">
+      <DependentUpon>userdata.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="userdata.aspx.designer.cs">
+      <DependentUpon>userdata.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <PropertyGroup>
