--- a/FDFk7/FDFk7/FDFk7.csproj
+++ b/FDFk7/FDFk7/FDFk7.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -67,6 +67,7 @@
     <Content Include="Kontakt.aspx" />
     <Content Include="Bruger.aspx" />
     <Content Include="Udlejning.aspx" />
+    <Content Include="userdata.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Global.asax.cs">
@@ -111,15 +112,12 @@
     <Compile Include="Udlejning.aspx.designer.cs">
       <DependentUpon>Udlejning.aspx</DependentUpon>
     </Compile>
-<<<<<<< HEAD
-=======
-    <Compile Include="Userdata.aspx.cs">
-      <DependentUpon>Userdata.aspx</DependentUpon>
+    <Compile Include="userdata.aspx.cs">
+      <DependentUpon>userdata.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Userdata.aspx.designer.cs">
-      <DependentUpon>Userdata.aspx</DependentUpon>
+    <Compile Include="userdata.aspx.designer.cs">
+      <DependentUpon>userdata.aspx</DependentUpon>
     </Compile>
->>>>>>> FETCH_HEAD
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
