--- a/FDFk7/FDFk7/FDFk7.csproj
+++ b/FDFk7/FDFk7/FDFk7.csproj
@@ -68,6 +68,7 @@
     <Content Include="Bruger.aspx" />
     <Content Include="Udlejning.aspx" />
     <Content Include="Userdata.aspx" />
+    <Content Include="adminCreateUser.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Global.asax.cs">
@@ -116,6 +117,12 @@
     </Compile>
     <Compile Include="Userdata.aspx.designer.cs">
       <DependentUpon>Userdata.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="adminCreateUser.aspx.cs">
+      <DependentUpon>adminCreateUser.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="adminCreateUser.aspx.designer.cs">
+      <DependentUpon>adminCreateUser.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <PropertyGroup>
